# GMP

./: .gitignore  CHANGELOG.md  GMP.cabal  LICENSE  README.md  README.org  stack.yaml
src/: Basics.hs  Debuger.hs  Debugger.hs  Errors.hs  Parser.hs  Tokenizer.hs
test/: Spec.hs
test/complexParsers/json/: JSONparser.hs
test/parsers/: CalcParser.hs  ListsParser.hs
test/simpleParsers/: BooleanAlgebra.hs  CalcParser.hs  ListsParser.hs  MorseCodeParser.hs
