name:                GMP
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Alf0nso/GMP/README.org
license:             BSD3
license-file:        LICENSE
author:              Afonso Pinto Cardoso Rafael
maintainer:          afonsorafael@sapo.pt
copyright:           2023 Afonso Pinto Cardoso Rafael
category:            Web
build-type:          Simple
extra-source-files:  README.org
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Tokenizer
                     , Errors
                     , Debugger
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.6.7
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/Alf0nso/GMP

test-suite GMPTesting
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_GMP
  hs-source-dirs:
      test 
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends: GMP
               , base >=4.7 && <5
               , containers >= 0.6.7
  default-language: Haskell2010
